fixed bug when media was not working on mobile

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ a:hover {
     padding: 10px 0;
 }
 
-@media (max-width: 700px) {
+@media screen and (max-width: 700px) {
     .info {
         text-align: center;
         display: block;
